<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- login strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="login_ek3_string">Login</string>
    <string name="email_string">Email</string>
    <string name="password_string">Password</string>
    <string name="login_ek4_string">Login</string>
    <string name="login_with_google_string">Login with Google</string>
    <string name="_forgot_password__string">Forgot Password?</string>
    <string name="_new_to_bus_app__register_now_string">New to Bus App? Register Now</string>
    <string name="or_string">OR</string>
    <string name="user_info_string">User Info</string>
    <string name="next_string">Next</string>
    <string name="first_name_string">First Name</string>
    <string name="last_name_string">Last Name</string>
    <string name="email_ek1_string">Email</string>
    <string name="phone_number_string">Phone Number</string>
    <string name="create_string">Create</string>
    <string name="security_string">Security</string>
    <string name="password_ek1_string">Password</string>
    <string name="confirm_password_string">Confirm Password</string>
    <string name="asfy_srugsrbg_shg_shdf_giuhiurg_iuhg_a_ngierg_iun_erg_nire_ugre_ugu_ergre_n_string">asfy srugsrbg shg shdf giuhiurg iuhg a ngierg iun erg nire  ugre ugu ergre  n</string>
    <string name="i_agreed_to_terms_and_conditions_string">I agreed to terms and conditions</string>
    <string name="change_string">Change</string>
    <string name="reset_password_string">Reset Password</string>
    <string name="password_ek2_string">Password</string>
    <string name="confirm_password_ek1_string">Confirm Password</string>
    <string name="text_string"></string>
    <string name="home_string">Home</string>
    <string name="current_trip_string">Current trip</string>
    <string name="recent_reminders_string">Recent Reminders</string>
    <string name="sleep_tracker_string">Sleep Tracker</string>
    <string name="edit_reminder_string">Edit Reminder</string>
    <string name="your_location_string">Your location</string>
    <string name="destination_string">Destination</string>
    <string name="save_string">Save</string>
    <string name="reminder_string">Reminder</string>
    <string name="your_location_ek1_string">Your location</string>
    <string name="destination_ek1_string">Destination</string>
    <string name="delete_string">Delete</string>
    <string name="choose_a_ride_string">Choose a ride</string>
    <string name="reminder_ek1_string">Reminder</string>
    <string name="where_to___string">Where to ? </string>
    <string name="now_string">Now</string>
    <string name="add_stop_string">Add Stop</string>
    <string name="from_string">From</string>
    <string name="next_ek1_string">Next</string>
    <string name="location_sharing_string">Location sharing</string>
    <string name="settings_string">Settings</string>
    <string name="home_ek1_string">Home</string>
    <string name="sajana_dewmina_string">Sajana Dewmina</string>
    <string name="user_account_string">User account</string>
    <string name="contact_no__0712345678_string">Contact no: 0712345678</string>
    <string name="last_name__galappaththi_string">Last Name: Galappaththi</string>
    <string name="email__sajana_dewmina_gmail_com_string">Email: sajana.dewmina@gmail.com</string>
    <string name="first_name__sajana_string">First Name: Sajana</string>
    <string name="sajana_galappaththi_string">Sajana Galappaththi</string>
    <string name="change_details_string">Change Details</string>
    <string name="change_password_string">Change Password </string>
    <string name="user_account_ek1_string">User Account</string>
    <string name="timeline_string">Timeline</string>
    <string name="sat__nov_20__2022_string">Sat, Nov 20, 2022</string>
    <string name="departure_time___08_00_a_m_string">Departure time :    08.00 a.m</string>
    <string name="arrival_time___09_30_a_m_string">Arrival time       :    09.30 a.m</string>
    <string name="start___171_cafe_lounge__navinna_string">Start                  :    171 cafe lounge, Navinna</string>
    <string name="end___new_hills__godagama_string">End                    :    New hills, Godagama</string>
    <string name="time_duration___01_30_hrs_string">Time duration   :    01.30 hrs</string>
    <string name="speed___55_kmph_string">Speed                :    55 kmph</string>
    <string name="sat__nov_21__2022_string">Sat, Nov 21, 2022</string>
    <string name="departure_time___08_00_a_m_ek1_string">Departure time :    08.00 a.m</string>
    <string name="arrival_time___09_30_a_m_ek1_string">Arrival time       :    09.30 a.m</string>
    <string name="start___171_cafe_lounge__navinna_ek1_string">Start                  :    171 cafe lounge, Navinna</string>
    <string name="end___new_hills__godagama_ek1_string">End                    :    New hills, Godagama</string>
    <string name="time_duration___01_30_hrs_ek1_string">Time duration   :    01.30 hrs</string>
    <string name="speed___55_kmph_ek1_string">Speed                :    55 kmph</string>
    <string name="sleep_tracker_ek1_string">Sleep Tracker</string>
    <string name="sat__nov_20__2022_ek1_string">Sat, Nov 20, 2022</string>
    <string name="sleep_start___08_15_a_m_string">Sleep start        :    08.15 a.m</string>
    <string name="sleep_end___09_25_a_m_string">Sleep end         :    09.25 a.m</string>
    <string name="sleep_duration___01_15_hrs_string">Sleep duration  :    01.15 hrs</string>
    <string name="sat__nov_20__2022_ek2_string">Sat, Nov 20, 2022</string>
    <string name="sleep_start___08_15_a_m_ek1_string">Sleep start        :    08.15 a.m</string>
    <string name="sleep_end___09_25_a_m_ek1_string">Sleep end         :    09.25 a.m</string>
    <string name="sleep_duration___01_15_hrs_ek1_string">Sleep duration  :    01.15 hrs</string>
    <string name="user_account_ek2_string">User Account</string>
    <string name="user_details_string">User details</string>
    <string name="last_name___galappaththi_string">Last Name :     Galappaththi</string>
    <string name="first_name___string">First Name :     Sajana</string>
    <string name="email___sajana_dewmina_gmail_string">Email          :     sajana.dewmina@gmail</string>
    <string name="timeline_ek1_string">Timeline</string>
    <string name="departure_time___08_00_a_m_ek2_string">Departure time :      08.00 a.m</string>
    <string name="arrival_time___09_30_a_m_ek2_string">Arrival Time      :      09.30 a.m</string>
    <string name="sleep_tracker_ek2_string">Sleep Tracker</string>
    <string name="sleep_end___09_25_a_m_ek2_string">Sleep end   :     09.25 a.m</string>
    <string name="sleep_start___08_15_a_m_ek2_string">Sleep start  :    08.15 a.m</string>
    <string name="sat__nov_20__2022_ek3_string">Sat, Nov 20, 2022</string>
    <string name="sat__nov_20__2022_ek4_string">Sat, Nov 20, 2022</string>
    <string name="first_name___sajana_string">First Name :     Sajana</string>
    <string name="email___sajana_dewmina_gmail_com_string">Email          :     sajana.dewmina@gmail.com</string>
    <string name="last_name___galappaththi_ek1_string">Last Name :     Galappaththi</string>
    <string name="contact_no___0712345678_string">Contact no :    0712345678</string>
    <string name="save_ek1_string">Save</string>
    <string name="user_account_ek3_string">User Account</string>
    <string name="change_photo_string">Change photo</string>
    <string name="must_contain_at_least_lowercase_letter__string">Must contain at least lowercase letter.</string>
    <string name="save_ek2_string">Save</string>
    <string name="change_password_ek1_string">Change Password</string>
    <string name="change_password_ek2_string">Change Password</string>
    <string name="change_password_ek3_string">Change Password</string>
    <string name="current_password_string">Current Password</string>
    <string name="new_password_string">New Password</string>
    <string name="confirm_password_ek2_string">Confirm Password</string>
    <string name="must_contain_at_least_8_characters__string">Must contain at least 8 characters.</string>
    <string name="must_contain_at_least_uppercase_letter__string">Must contain at least uppercase letter.</string>
    <string name="location_sharing_ek1_string">Location sharing</string>
    <string name="current_trip_ek1_string">Current trip</string>
    <string name="telegram_string">Telegram</string>
    <string name="messenger_string">Messenger</string>
    <string name="message_string">Message</string>
    <string name="whatsapp_string">WhatsApp</string>
    <string name="open_in_browser_string">Open in browser</string>
    <string name="copy_link_string">   Copy link</string>
    <string name="continue_string">Continue</string>
    <string name="we_will_send_you_the_email_string">We will send you the email</string>
    <string name="email_ek2_string">Email</string>
    <string name="forgot_password__ek1_string">Forgot Password?</string>
    <string name="text_ek1_string"></string>
    <string name="current_trip_ek2_string">Current trip</string>
    <string name="recent_reminders_ek1_string">Recent Reminders</string>
    <string name="sleep_tracker_ek3_string">Sleep Tracker</string>
    <string name="home_ek2_string">Home</string>
    <string name="about_string">About</string>
    <string name="sleep_track_string">Sleep Track</string>
    <string name="settings_ek1_string">Settings</string>
    <string name="reminder_ek2_string"> Reminder</string>
    <string name="clear_data_string">Clear Data</string>
    <string name="we_are_developing_an_app_for_the_people_who_are_using_public_transportation_service_for_the_transport_and_who_can_miss_their_destination_because_of_the_unavoidable_reasons__using_this_application__they_can_set_their_departure_point_and_destination_point__then_system_will_send_a_vibration_signal_or_a_sound_when_they_come_closure_to_the_halt__version__1_001_string">We are developing an app for the people who are using public transportation service for the transport and who can miss their destination because of the unavoidable reasons. Using this application, they can set their departure point and destination point. Then system will send a vibration signal or a sound when they come closure to the halt.Version: 1.001</string>
    <string name="about_ek1_string"><strike>About</strike></string>
    <string name="user_agreement_string">User agreement</string>
    <string name="user_agreement_ek1_string">User agreement</string>
    <string name="sound_string">Sound</string>
    <string name="reminder_settings_string"> Reminder Settings</string>
    <string name="vibrate_string">vibrate</string>
    <string name="headset__if_your_wear__string">Headset (If your wear)</string>
    <string name="speeker_string">Speeker</string>
    <string name="select_sound_string">Select Sound</string>
    <string name="sound_ek1_string">Sound</string>
    <string name="reminder_settings_ek1_string"> Reminder Settings</string>
    <string name="vibrate_ek1_string">vibrate</string>
    <string name="clear_history_string"><strike>Clear History</strike></string>
    <string name="clear_history_ek1_string"><strike>Clear History</strike></string>
    <string name="settings_ek2_string">Settings</string>
    <string name="reminder_ek3_string"> Reminder</string>
    <string name="about_ek2_string">About</string>
    <string name="sleep_tracker_history_string">Sleep Tracker History</string>
    <string name="timeline_history_string">Timeline History </string>
    <string name="clear_data_ek1_string">Clear Data</string>
    <string name="sleep_track_ek1_string">Sleep Track</string>

</resources>